@@ -1,4 +1,4 @@
-$Id: CHANGELOG,v 1.43 1999-12-12 00:25:59 adam Exp $
+$Id: CHANGELOG,v 1.44 2001-02-09 11:58:04 adam Exp $
 
 06/19/95 Release of ir-tcl-1.0b
 ------------------------------------------------------
@@ -134,3 +134,6 @@ $Id: CHANGELOG,v 1.43 1999-12-12 00:25:59 adam Exp $
 ------------------------------------------------------
 
 12/12/99 Updated list of preconfigured targets for test client.
+
+02/09/01 Updated for Tcl8.1 and upwards where internal encoding is UTF-8.
+         Queries and Scan star terms are converted to external encoding.
